2008-07-10  Eugenio Favalli  <elvenprogrammer@themanaworld.org>

	* tmw.cbp: Restored executable icon.

2008-07-08  David Athay  <ko2fan@gmail.com>

	* src/gui/chat.cpp, src/gui/chat.h: Mantis #359 patch by Scraggy.
 
2008-06-30  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt: Updated CMake file to fix compilation. Patch by
	darkKnight.

2008-06-24  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp, src/particle.h, src/particleemitter.cpp,
	src/particleemitter.h: Added particle property "follow-parent" which
	makes the particle move when its parent particle is moved.

2008-06-23  Philipp Sehmisch  <tmw@crushnet.org>

	* src/imageparticle.cpp, src/particle.cpp, src/particle.h,
	src/particleemitter.cpp, src/particleemitter.h, src/textparticle.cpp:
	Implemented "alpha" particle property.

2008-06-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/player_relations.h: Fixed warning about missing virtual
	destructor.

2008-06-17  Fate  <fate.tmw@googlemail.com>

	* src/net/tradehandler.cpp: bug #333: Suppress `trade with X cancelled' 
	messages for ignored players.

2008-06-16  Fate  <fate.tmw@googlemail.com>

	* player_relations.h: Allow whispers by default.

2008-06-14  David Athay  <ko2fan@gmail.com>

	* src/gui/shop.cpp, src/gui/browserbox.cpp, src/net/tradehandler.cpp:
	Fixed compilation errors. Fixed trade bug (although a little hacky
	right now).
	* src/net/tradehandler.cpp: Changed bug fix as requested by Bjørn.

2008-06-08  Fate  <fate.tmw@googlemail.com>

	* src/gui/table.cpp: Invalidate mTopWidget whenever the model is
	regenerated to reflect that we have no current valid selection.
	* src/player_relations.cpp: Proper handling of case where player, to
	apply ignore strategy to, is NULL.

2008-06-05  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp, src/gui/setup_video.cpp: Lowered default particle
	detail level.

2008-06-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp, src/gui/updatewindow.h, src/main.cpp,