@@ -48,8 +48,10 @@ class ServerListModel : public gcn::ListModel {
         std::string getElementAt(int i);
 };
 
-ServerSelectDialog::ServerSelectDialog(LoginData *loginData):
-    Window("Select Server"), mLoginData(loginData)
+ServerSelectDialog::ServerSelectDialog(LoginData *loginData, int nextState):
+    Window("Select Server"),
+    mLoginData(loginData),
+    mNextState(nextState)
 {
     mServerListModel = new ServerListModel();
     mServerList = new ListBox(mServerListModel);
@@ -105,10 +107,12 @@ ServerSelectDialog::action(const gcn::ActionEvent &event)
         const SERVER_INFO *si = server_info[mServerList->getSelected()];
         mLoginData->hostname = iptostring(si->address);
         mLoginData->port = si->port;
-        state = CHAR_CONNECT_STATE;
+        mLoginData->updateHost = si->updateHost;
+
+        state = mNextState;
     }
     else if (event.getId() == "cancel") {
-        state = LOADDATA_STATE;
+        state = LOGIN_STATE;
     }
 }
 
