@@ -1,3 +1,10 @@
+2008-07-16  Lloyd Bryant  <lloyd_bryant@netzero.net>
+
+	* src/logindata.h, src/gui/char_server.cpp, src/gui/char_server.h,
+	src/serverinfo.h, src/main.cpp, src/net/loginhandler.cpp,
+	src/net/loginhandler.h, src/net/network.cpp: Added support for
+	handling the custom eAthena packet that sends the update host.
+
 2008-07-10  Eugenio Favalli  <elvenprogrammer@themanaworld.org>
 
 	* tmw.cbp: Restored executable icon.
